ref-master: add master workspace
